[package]
name = "dep-precompiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "precompile-deps"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }

[dev-dependencies]
argon2 = "0.5"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["multipart"] }
axum-embed = "0.1.0"
axum-extra = "0.10.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22.1"
bip32 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
clap_complete = { version = "4.5.47" }
convert_case = "0.4"
csv = "1.3.1"
ctor = "0.2.8"
env_logger = "0.11.5"
flexi_logger = "0.29.2"
image = { version = "0.25", default-features = false, features = ["webp"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
log = "0.4.22"
mime_guess = "2"
paste = "1.0.15"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0"
quote = "1.0"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rust-embed = "8.6.0"
sanitize-filename = "0.6.0"
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tempfile = "3.19.1"
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.19"
yahoo_finance_api = { git = "https://github.com/xemwebe/yahoo_finance_api", rev = "6c0dd340c4790b1456db27616eba3ebe9b78b446" }
tower-http = { version = "0.6.2", features = [
    "cors",
    "fs",
    "trace",
    "set-header",
] }
x509-parser = "0.18"
zip = { version = "5.0.0", default-features = false, features = ["deflate"] }
